--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
 	<meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>DeepRacer Challenge -Shenzhen Stopwatch</title>
+	
+	<link rel="stylesheet" href="css/jquery-confirm.css">
 
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
 	<link href="css/bootstrap-responsive.min.css" rel="stylesheet" />
 
 	<link href="css/custom.css" rel="stylesheet" />
+
+	
 
 
 </head>
@@ -35,11 +39,11 @@
 					<div class="row hidden" id="divControls">
 						<div class="span2 center">
 							<div class="row">
-								<label class="radio-inline">
+								<!-- <label class="radio-inline">
 									<button id="btnPause" class="btn btn-large btn-block" type="button">
 										Pause
 									</button>
-								</label>
+								</label> -->
 								<label class="radio-inline">
 									<button id="btnSplit" class="btn btn-large btn-block" type="button">
 										Split
@@ -91,6 +95,7 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/jquery.fittext.js"></script>
 	<script src="js/index.js"></script>
+	<script src="js/jquery-confirm.js"></script>
 
 
 </body>
