--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>DeepRacer Challenge -Shenzhen Stopwatch</title>
-	
+
 	<link rel="stylesheet" href="css/jquery-confirm.css">
 
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
@@ -13,89 +13,82 @@
 
 	<link href="css/custom.css" rel="stylesheet" />
 
-	
+
 
 
 </head>
 
 <body>
 	<header>
-		<div class="container">
-			<div class="center">
-				<div id="stopWatch">
-					<h1 id="title">DeepRacer Challenge -Shenzhen Stopwatch</h1>
-					<div class="row">
-						<div class="span12">
-							<div id="time" class="pointable" style="font-weight:bold; width:100%; display:block;">00:00
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div id="divStart" class="span2 center">
-							<button id="btnStart" class="btn btn-large btn-block btn-primary" style="font-weight:bold;"
-								data-do="start" type="button">Start</button>
-						</div>
-					</div>
-					<div class="row hidden" id="divControls">
-						<div class="span2 center">
-							<div class="row">
-								<!-- <label class="radio-inline">
-									<button id="btnPause" class="btn btn-large btn-block" type="button">
-										Pause
-									</button>
-								</label> -->
-								<label class="radio-inline">
-									<button id="btnSplit" class="btn btn-large btn-block" type="button">
-										Split
-									</button>
-								</label>
-								<label class="radio-inline">
-									<button id="btnStop" class="btn btn-large btn-block" type="button">
-										Reset
-									</button>
-								</label>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="clear"></div>
-			
-				<div id="lapTimes" class="hidden row center">
-					<div class="heightlap" style="margin-top:10px;">
-						<button class="btn hidden" id="btnClear" type="button">Clear</button>
-					</div>
-
-					<div class="span12 center " id="lapListCont" style="height:0px;">
-					
-						<div class="span2 center  ">
-								<table id="timeTable" class="table table-hover table-striped" style="width:70%; margin:auto;">
-									<thead class = "hidden">
-										<th>TeamName</th>
-										<th>Rotation</th>
-										<th>Score</th>
-										<th>Status</th>
-										<th>CreateOn</th>
-									</thead>
-									<tbody id="lapList">
-									</tbody>
-								</table>
-						</div>
-					</div>
-					</div>
-					
+		<h1 id="title" class="center">Current TeamName:</h1>
+	</header>
+	<div class="container">
+		<div class="row">
+			<div class="center" id="stopWatch" style="padding-top:5%;">
+				<div id="time" class="pointable" style="font-weight:bold; width:100%; display:block;">00:00
 				</div>
 			</div>
 		</div>
+		<div class="row">
+			<div id="divStart" class="span2 center">
+				<button id="btnStart" class="btn btn-large btn-block btn-primary" style="font-weight:bold;"
+					data-do="start" type="button">Start</button>
+			</div>
 
-		</div>
+			<div class="container">
+				<div class="row hidden" id="divControls">
+					<div class="span1 center">
+						<!-- <label class="radio-inline">
+							<button id="btnPause" class="btn btn-large btn-block" type="button">
+								Pause
+							</button>
+						</label> -->
+						<label class="radio-inline">
+							<button id="btnSplit" class="btn btn-large btn-block btn-danger" type="button" style="width:100px;">
+								Split
+							</button>
+						</label>
+					</div>
+					<div class="span1 center ">
+						<label class="radio-inline">
+							<button id="btnStop" class="btn btn-large btn-block btn-primary" type="button" style="width:100px;">
+								Reset
+							</button>
+						</label>
+					</div>
+				</div>
+			</div>
+			<div class="clear"></div>
 
-	</header>
+			<div id="lapTimes" class="hidden row">
+				<div class="heightlap" style="margin-top:10px;">
+					<button class="btn hidden" id="btnClear" type="button">Clear</button>
+				</div>
 
-	<script type="text/javascript" src="js/jquery.1.9.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.fittext.js"></script>
-	<script src="js/index.js"></script>
-	<script src="js/jquery-confirm.js"></script>
+				<div class="span10 " id="lapListCont" style="height:0px;">
+
+					<div class="span2 center  ">
+						<table id="timeTable" class="table table-hover table-striped" style="width:70%; margin:auto;">
+							<thead class="hidden">
+								<th>TeamName</th>
+								<th>Rotation</th>
+								<th>Score</th>
+								<th>Status</th>
+								<th>CreateOn</th>
+							</thead>
+							<tbody id="lapList">
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+
+
+			<script type="text/javascript" src="js/jquery.1.9.1.min.js"></script>
+			<script src="js/bootstrap.min.js"></script>
+			<script src="js/jquery.fittext.js"></script>
+			<script src="js/index.js"></script>
+			<script src="js/jquery-confirm.js"></script>
 
 
 </body>
